# politistream

./: .env.example  .gitignore  .vercelignore  DESIGN.md  README.md  archive-all.ts  docker-compose.yml  index.html  metadata.json  news.db  news.db-shm  news.db-wal  package-lock.json  package.json  plan.md  server-local.ts  server.ts  serverless.ts  test-jina.ts  test-puppeteer.ts  test-url.ts  test.ts  vercel.json  vite.config.ts
api/: handler.ts
docs/: data-lab-spss-plus-ai-visualization-upgrade-plan-2026-06-07.md  data-lab-topic-driven-analytics-upgrade-plan-2026-06-22.md  data-processing-analytics-visualization-and-ai-lab-upgrade-plan-2026-06-07.md  data-processing-analytics-visualization-and-data-source-upgrade-plan-2026-06-07.md  data-processing-analytics-visualization-platform-plan-2026-06-07.md  data-processing-analytics-visualization-publication-plan-2026-06-07.md  data-processing-analytics-visualization-spss-pro-plus-research-plan-2026-06-07.md  deep-research-crawler-upgrade-plan.md  frontend-backend-crawler-architecture.md  full-implementation-audit-2026-06-08_09-57-40.md  strong-crawler-tooling-research-2026-06-07.md
issues/: 20260527-232120-update-search-first-home.csv  20260527100920-upgrade-research-crawler-platform.csv  20260622-183513-add-research-analytics-handoff.csv
plan/: 01-search-first-research-home-2026-05-27_23-09-43.md  02-research-analytics-handoff-2026-06-22_18-35-13.md  (+1 more)
workers-analytics/: README.md  pyproject.toml
workers-analytics/politistream_analytics/: __init__.py  advanced.py  profiling.py  statistics.py  worker.py
(+132 files in other folders)
