[project]
name = "politistream-analytics-worker"
version = "0.1.0"
description = "Python analytics worker lane for PolitiStream datasets, statistics, and visualization artifacts."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "polars>=1.0.0",
  "pyarrow>=16.0.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.0",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "plotly>=5.22.0",
  "trafilatura>=1.12.0",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
ml = [
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "sentence-transformers>=3.0.0",
  "shap>=0.46.0",
]
quality = [
  "pandera>=0.20.0",
  "ydata-profiling>=4.9.0",
  "great-expectations>=1.0.0",
  "evidently>=0.4.0",
]
geo = [
  "geopandas>=1.0.0",
  "folium>=0.17.0",
]
reports = [
  "jupyter>=1.0.0",
  "nbconvert>=7.16.0",
  "python-pptx>=0.6.23",
]
content = [
  "unstructured>=0.16.0",
]

[project.scripts]
politistream-analytics-worker = "politistream_analytics.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["politistream_analytics"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
